# ClothSimulation

./: .gitignore  CMakeLists.txt  README.md
src/: engine.cpp  engine.hpp  main.cpp
src/balls/: ball.hpp  cloth.cpp  cloth.hpp
src/buffer/: buffer.cpp  buffer.hpp
src/camera/: camera.cpp  camera.hpp
src/hw_ui/: controller.cpp  controller.hpp  imgui.cpp  imgui.hpp  window.cpp  window.hpp
src/runtime/shaders/: asdf.geom  cloth.comp  cloth_physics.comp  default.frag  default.vert  point.frag  point.vert  sadf.geom  skybox.frag  skybox.vert  stick.frag  stick.vert
src/shader/: shader.cpp  shader.hpp
src/update_command/: update_command.hpp
